--- a/index.html
+++ b/index.html
@@ -4,22 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css" />
     <title>Control de Gastos e Ingresos</title>
   </head>
   <body>
-    <section class="inputs">
-      <div>
+    <div id="divButtons" class="d-flex justify-content-center mb-3 ">
+      <button id='search'class="btn btn-primary btn-lg me-2">
+        Buscar          
+      </button>
+      <button id='add' class="btn btn-success btn-lg">
+        Nuevo Movimiento
+      </button>
+    </div>
+    <section class="inputs d-flex justify-content-center my-2 w-100">
+      <div id="divBuscar" class="mx-2">
         <label for="buscar">Buscar:</label>
         <input
-          type="text"
-          name="buscar"
-          id="buscar"
-          onkeyup="buscarMovimientos()"
+        class="w-100 mt-2" 
+        type="text"
+        name="buscar"
+        id="buscar"
+        placeholder="Ingrese nombre del Movimiento"
         />
       </div>
-      <div>
+      <div id="divForm">
         <form id="movimientoForm">
           <label for="tipo">Tipo:</label>
           <select name="tipo" id="tipo">
@@ -37,7 +46,19 @@
         </form>
       </div>
     </section>
+    <section id="cotizaciones" class="row justify-content-around  mb-3">
+      <div class="newtons-cradle w-25">
+        <div class="newtons-cradle__dot"></div>
+        <div class="newtons-cradle__dot"></div>
+        <div class="newtons-cradle__dot"></div>
+        <div class="newtons-cradle__dot"></div>
+      </div>
+    </section>
     <div id="Movimientos"></div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="main.js"></script>
-</html>
+  <script src="final.js"></script>
+  </html>
+  
